--- a/Dream-Interpreter.html
+++ b/Dream-Interpreter.html
@@ -95,7 +95,7 @@
     const genAI = new GoogleGenerativeAI(API_KEY);
 
     // Additional logic with the Google Generative AI...
-    const model = genAI.getGenerativeModel({ model: "MODEL_NAME" });
+    const model = genAI.getGenerativeModel({ model: "gemini-pro" });
     // ...
   </script>
 </body>
