--- a/Dream-Interpreter.html
+++ b/Dream-Interpreter.html
@@ -5,6 +5,39 @@
   <title>Dream Interpreter</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="dark-mode.css">
+    <style type="text/css>.dark-mode {
+  background-color: #000;
+  color: #fff;
+}
+
+.dark-mode h1 {
+  color: #fff;
+}
+
+.dark-mode form {
+  background-color: #000;
+  color: #fff;
+}
+
+.dark-mode label {
+  color: #fff;
+}
+
+.dark-mode textarea {
+  background-color: #000;
+  color: #fff;
+}
+
+.dark-mode input[type="submit"] {
+  background-color: #fff;
+  color: #000;
+}
+
+.dark-mode #result {
+  background-color: #000;
+  color: #fff;
+}
+</style>
   <script type="importmap">
     {
       "imports": {
