--- a/String-Gemini-Pro2.html
+++ b/String-Gemini-Pro2.html
@@ -5,7 +5,7 @@
   <title>String Sleuth</title>
   <link rel="stylesheet" href="style.min.css">
   <script src="script.min.js"></script>
-  <script src="https://unpkg.com/@google-cloud/vertexai"></script>
+  <script src="https://unpkg.com/@google-cloud/vertexai@latests/:geminipro"></script>
   <script src="https://unpkg.com/@google-cloud/geminipro"></script>
   <style>
     body {
@@ -132,7 +132,7 @@
 
 <body>
   <div class="container">
-    <h1>String Sleuth</h1>
+    <h1>String Wizard</h1>
     <form id="form">
       <div class="input-group">
         <label for="base_url">Base URL:</label>
@@ -176,7 +176,7 @@
       e.target.checked ? advancedOptionsContainer.style.display = "block" : advancedOptionsContainer.style.display = "none";
     });
     const resultsContainer = document.getElementById("results");
-    const gemini = new GeminiPro();
+    const geminipro = new GeminiPro();
     gemini.init({
       apiKey: "AIzaSyC2G421VCZmAQSao1V2lRIzn1-kx_gFd5w",
       engine: "text-bison-001"
@@ -221,93 +221,6 @@
         }
       });
     };
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const base_url = document.getElementById("base_url").value;
-      const html = document.getElementById("html").value;
-      if (!base_url || !html) {
-        alert("Please provide a base URL and HTML.");
-        return;
-      }
-      searchWithGemini(base_url, html);
-    });
-    "pages.github.com" === window.location.hostname && document.querySelector("base").setAttribute("href", "/String-Sleuth/");
-    const form = document.getElementById("form");
-    const advancedOptionsContainer = document.getElementById("advanced_options_container");
-    const advancedOptions = document.getElementById("advanced_options");
-    advancedOptions.addEventListener("change", (e) => {
-      e.target.checked ? advancedOptionsContainer.style.display = "block" : advancedOptionsContainer.style.display = "none";
-    });
-    form.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const base_url = document.getElementById("base_url").value;
-      const html = document.getElementById("html").value;
-      if (!base_url || !html) {
-        alert("Please provide a base URL and HTML.");
-        return;
-      }
-      const conversionType = document.getElementById("conversion_type").value;
-      const detectBrokenLinks = document.getElementById("detect_broken_links").checked;
-      const identifyAlternativeLinks = document.getElementById("identify_alternative_links").checked;
-      const optimizeHtml = document.getElementById("optimize_html").checked;
-      searchWebsite(base_url, html, {
-        conversionType,
-        detectBrokenLinks,
-        identifyAlternativeLinks,
-        optimizeHtml
-      });
-    });
-    const searchWebsite = (base_url, html, options) => {
-      const xhr = new XMLHttpRequest();
-      xhr.open("GET", base_url);
-      xhr.setRequestHeader("Content-Type", "text/html");
-      xhr.onload = function () {
-        if (xhr.status === 200) {
-          const response = xhr.responseText;
-          const parser = new DOMParser();
-          const doc = parser.parseFromString(response, "text/html");
-          const elements = doc.querySelectorAll("body *");
-          elements.forEach((element) => {
-            const textContent = element.textContent;
-            const regex = new RegExp(html, "g");
-            if (textContent.match(regex)) {
-              const highlightedHtml = element.parentElement.innerHTML.replace(html, `<mark>${html}</mark>`);
-              const before = textContent.substring(0, textContent.indexOf(html));
-              const after = textContent.substring(textContent.indexOf(html) + html.length);
-              console.log(`URL: ${window.location.href}`);
-              console.log(`Before: ${before}`);
-              console.log(`String: ${html}`);
-              console.log(`After: ${after}`);
-              console.log(`HTML: ${highlightedHtml}`);
-            }
-          });
-        } else {
-          console.error("Error: " + xhr.statusText);
-        }
-      };
-      xhr.send();
-    };
-    const gemini = new GeminiPro();
-    gemini.init({
-      apiKey: "AIzaSyC2G421VCZmAQSao1V2lRIzn1-kx_gFd5w",
-      engine: "gemini-pro"
-    });
-    const generateHtml = async (prompt) => {
-      const response = await gemini.generate(prompt);
-      return response.candidates[0].output;
-    };
-    const searchWithGemini = (base_url, html) => {
-      const prompt = `I am searching for the following HTML code or string on the web page at ${base_url}:\n\n${html}\n\nReturn the HTML code of the web page, highlighting all instances of the HTML code or string that I am searching for.`;
-      generateHtml(prompt).then((result) => {
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(result, "text/html");
-        const highlightedHtml = doc.querySelector("body").innerHTML;
-        document.getElementById("results").innerHTML = highlightedHtml;
-      });
-    };
-    advancedOptions.addEventListener("change", (e) => {
-      e.target.checked ? advancedOptionsContainer.style.display = "block" : advancedOptionsContainer.style.display = "none";
-    });
     form.addEventListener("submit", (e) => {
       e.preventDefault();
       const base_url = document.getElementById("base_url").value;
